Fix spacing of "days completed" text

--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ body {
   flex-wrap: wrap;
   width: 348px;
   height: 144px;
-  margin-top: 60px;
+  margin-top: 45px;
   margin-left: 64px;
 }
 
